--- a/02 Python Setup/03 Installing VSCode.ipynb
+++ b/02 Python Setup/03 Installing VSCode.ipynb
@@ -220,12 +220,9 @@
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Installing VS Code</a>\n",
     "          <ul>\n",
-    "            <li><a href=\"#toc1_1_\">MacOS</a></li>\n",
-    "            <li><a href=\"#toc1_2_\">Linux</a></li>\n",
-    "            <li><a href=\"#toc1_3_\">WSL</a>\n",
-    "              <ul>\n",
-    "                <li><a href=\"#toc1_3_1_\">Open a remote folder or workspace</a></li>\n",
-    "              </ul>\n",
+    "            <li><a href=\"#toc1_1_\">Windows</a>\n",
+    "            <li><a href=\"#toc1_2_\">MacOS</a></li>\n",
+    "            <li><a href=\"#toc1_3_\">Linux</a></li>\n",
     "            </li>\n",
     "          </ul>\n",
     "        </li>\n",
@@ -240,11 +237,17 @@
     "<div class=\"section-card\" id=\"toc1_\">\n",
     "  <h2>Installing VS Code</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card orange\">\n",
-    "      <h3>Installation Overview</h3>\n",
-    "      <img src=\"../images/vscode-install-path-mac.png\" alt=\"VS Code Installation\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
-    "    </div>\n",
     "    <div class=\"card orange\" id=\"toc1_1_\">\n",
+    "      <h3>Windows Installation</h3>\n",
+    "      <ul>\n",
+    "        <li>Download the Visual Studio Code installer from the official website.</li>\n",
+    "        <li>Run the installer (<code>VSCodeSetup.exe</code>) and follow the setup wizard.</li>\n",
+    "        <li>During installation, check the \"Add to PATH\" option to enable launching VS Code from the terminal.</li>\n",
+    "        <li>Launch VS Code from the Start menu or desktop shortcut after installation.</li>\n",
+    "      </ul>\n",
+    "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/setup/windows\">Install Visual Studio Code on Windows</a>.</p>\n",
+    "    </div>\n",
+    "    <div class=\"card orange\" id=\"toc1_2_\">\n",
     "      <h3>MacOS Installation</h3>\n",
     "      <ul>\n",
     "        <li>Download Visual Studio Code from the official website.</li>\n",
@@ -255,45 +258,13 @@
     "      </ul>\n",
     "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/setup/mac\">Install Visual Studio Code on macOS</a>.</p>\n",
     "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc1_2_\">\n",
+    "    <div class=\"card orange\" id=\"toc1_3_\">\n",
     "      <h3>Linux Installation</h3>\n",
     "      <ul>\n",
     "        <li>Install via the Ubuntu Software Center or download the <code>.deb</code> file from the official website.</li>\n",
     "        <li>For command-line installation, use: <code>sudo apt install ./&lt;file&gt;.deb</code> or <code>sudo dpkg -i &lt;file&gt;.deb</code> followed by <code>sudo apt-get install -f</code> for older distributions.</li>\n",
     "      </ul>\n",
     "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/setup/linux\">Install Visual Studio Code on Linux</a>.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc1_3_\">\n",
-    "      <h3>WSL Installation</h3>\n",
-    "      <ul>\n",
-    "        <li>Install Windows Subsystem for Linux (WSL) and a Linux distribution.</li>\n",
-    "        <li>Install VS Code on Windows, ensuring the \"Add to PATH\" option is selected.</li>\n",
-    "        <li>Install the WSL extension or Remote Development extension pack.</li>\n",
-    "        <li>Open a WSL terminal, navigate to a folder, and type <code>code .</code> to open it in VS Code.</li>\n",
-    "      </ul>\n",
-    "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/remote/wsl\">VS Code WSL Documentation</a>.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc1_3_\">\n",
-    "      <h3>Windows Installation</h3>\n",
-    "      <ul>\n",
-    "        <li>Download the Visual Studio Code installer from the official website.</li>\n",
-    "        <li>Run the installer (<code>VSCodeSetup.exe</code>) and follow the setup wizard.</li>\n",
-    "        <li>During installation, check the \"Add to PATH\" option to enable launching VS Code from the terminal.</li>\n",
-    "        <li>Launch VS Code from the Start menu or desktop shortcut after installation.</li>\n",
-    "      </ul>\n",
-    "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/setup/windows\">Install Visual Studio Code on Windows</a>.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc1_3_1_\">\n",
-    "      <h3>Open a Remote Folder or Workspace (WSL)</h3>\n",
-    "      <img src=\"../images/wsl-starting-notification.png\" alt=\"WSL Folder Opening\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
-    "      <ul>\n",
-    "        <li>Open a WSL terminal and navigate to a folder (e.g., <code>/mnt/c</code>).</li>\n",
-    "        <li>Type <code>code .</code> to open the folder in VS Code.</li>\n",
-    "        <li>VS Code configures itself in WSL, showing a WSL indicator in the bottom left corner.</li>\n",
-    "      </ul>\n",
-    "    </div>\n",
-    "    <div class=\"note\">\n",
-    "      <strong>Important Note for Mac Users:</strong> If <code style=\"background-color: black\">code</code> or <code style=\"background-color: black\">code .</code> doesn’t work, open VS Code, use ⌘⇧P to open the Command Palette, type \"shell command,\" uninstall and reinstall the \"code\" command in PATH, then restart the terminal.\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
@@ -302,10 +273,6 @@
     "<div class=\"section-card\" id=\"toc2_\">\n",
     "  <h2>How to Launch Visual Studio Code from Terminal</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card purple\">\n",
-    "      <h3>Terminal Launch</h3>\n",
-    "      <img src=\"../images/wsl-statusbar-indicator.png\" alt=\"VS Code Terminal Launch\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
-    "    </div>\n",
     "    <div class=\"card purple\">\n",
     "      <h3>Steps to Launch</h3>\n",
     "      <ul>\n",
