--- a/02 Python Setup/03 Installing VSCode.ipynb
+++ b/02 Python Setup/03 Installing VSCode.ipynb
@@ -245,7 +245,7 @@
     "        <li>During installation, check the \"Add to PATH\" option to enable launching VS Code from the terminal.</li>\n",
     "        <li>Launch VS Code from the Start menu or desktop shortcut after installation.</li>\n",
     "      </ul>\n",
-    "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/setup/windows\">Install Visual Studio Code on Windows</a>.</p>\n",
+    "      <p>For more details, see <a href=\"https://code.visualstudio.com/Download\">Install Visual Studio Code on Windows</a>.</p>\n",
     "    </div>\n",
     "    <div class=\"card orange\" id=\"toc1_2_\">\n",
     "      <h3>MacOS Installation</h3>\n",
@@ -256,7 +256,7 @@
     "        <li>Open VS Code from the Applications folder or Launchpad.</li>\n",
     "        <li>Add VS Code to the Dock via the context menu (Options > Keep in Dock).</li>\n",
     "      </ul>\n",
-    "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/setup/mac\">Install Visual Studio Code on macOS</a>.</p>\n",
+    "      <p>For more details, see <a href=\"https://code.visualstudio.com/Download\">Install Visual Studio Code on macOS</a>.</p>\n",
     "    </div>\n",
     "    <div class=\"card orange\" id=\"toc1_3_\">\n",
     "      <h3>Linux Installation</h3>\n",
@@ -264,7 +264,7 @@
     "        <li>Install via the Ubuntu Software Center or download the <code>.deb</code> file from the official website.</li>\n",
     "        <li>For command-line installation, use: <code>sudo apt install ./&lt;file&gt;.deb</code> or <code>sudo dpkg -i &lt;file&gt;.deb</code> followed by <code>sudo apt-get install -f</code> for older distributions.</li>\n",
     "      </ul>\n",
-    "      <p>For more details, see <a href=\"https://code.visualstudio.com/docs/setup/linux\">Install Visual Studio Code on Linux</a>.</p>\n",
+    "      <p>For more details, see <a href=\"https://code.visualstudio.com/Download\">Install Visual Studio Code on Linux</a>.</p>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
