--- a/02 Python Setup/06 Installing and Using Conda.ipynb
+++ b/02 Python Setup/06 Installing and Using Conda.ipynb
@@ -301,6 +301,7 @@
     "    <div class=\"card green\" id=\"toc3_1_\">\n",
     "      <h3>Windows Installation</h3>\n",
     "      <p>Download the Miniconda installer from the official website, run it, follow the wizard, and add Miniconda to the PATH during installation.</p>\n",
+    "      <a href=\"https://www.anaconda.com/download/success\">installing miniconda</a>\n",
     "    </div>\n",
     "    <div class=\"card green\" id=\"toc3_2_\">\n",
     "      <h3>Linux and WSL Installation</h3>\n",
