--- a/02 Python Setup/04 Package Manager.ipynb
+++ b/02 Python Setup/04 Package Manager.ipynb
@@ -247,6 +247,7 @@
     "        <li><a href=\"#toc3_\">Benefits of Using a Package Manager</a></li>\n",
     "        <li><a href=\"#toc4_\">Package Repository</a></li>\n",
     "        <li><a href=\"#toc5_\">Conda vs. Pip</a></li>\n",
+    "        <li><a href=\"#toc5_\">Virtual Environments (venv)</a></li>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
@@ -395,223 +396,9 @@
     "                </tr>\n",
     "            </table>\n",
     "        </div>\n",
-    "        <div class=\"card red\">\n",
-    "            <h3>Why we prefer Pip + venv for this course</h3>\n",
-    "            <p>Conda is powerful for Data Science but can be frustrating due to network timeout issues. By using <b>Pip</b> and <b>venv</b>, you gain full control over your environment with high speed using domestic mirrors.</p>\n",
-    "        </div>\n",
-    "    </div>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cdd8cce7",
-   "metadata": {},
-   "source": [
-    "<style>\n",
-    "  * {\n",
-    "    box-sizing: border-box;\n",
-    "  }\n",
-    "\n",
-    "  .section-card {\n",
-    "    background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70));\n",
-    "    border-radius: 15px;\n",
-    "    padding: 2rem;\n",
-    "    margin-bottom: 2.5rem;\n",
-    "    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);\n",
-    "    width: 100%;\n",
-    "    max-width: min(1200px, 95vw);\n",
-    "    margin: 0 auto 2.5rem;\n",
-    "  }\n",
-    "\n",
-    "  .section-card h2 {\n",
-    "    text-align: center;\n",
-    "    color: #ffffff;\n",
-    "    font-size: 1.8rem;\n",
-    "    margin-bottom: 1.5rem;\n",
-    "    font-family: 'Poppins', sans-serif;\n",
-    "    letter-spacing: 1px;\n",
-    "  }\n",
-    "\n",
-    "  .container {\n",
-    "    display: flex;\n",
-    "    flex-direction: column;\n",
-    "    gap: 1.25rem;\n",
-    "  }\n",
-    "\n",
-    "  .card {\n",
-    "    background: linear-gradient(145deg, #24243e, #1e1e3a);\n",
-    "    border-radius: 12px;\n",
-    "    padding: 1.5rem;\n",
-    "    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);\n",
-    "    transition: transform 0.3s ease, box-shadow 0.3s ease;\n",
-    "    border-left: 4px solid transparent;\n",
-    "    width: min(1000px, 90vw);\n",
-    "    margin: 0 auto;\n",
-    "  }\n",
-    "\n",
-    "  .card:hover {\n",
-    "    transform: translateY(-6px);\n",
-    "    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);\n",
-    "  }\n",
-    "\n",
-    "  .image-card img {\n",
-    "    max-width: 100%;\n",
-    "    height: auto;\n",
-    "    display: block;\n",
-    "  }\n",
-    "\n",
-    "  h1 {\n",
-    "    width: 100%;\n",
-    "    text-align: center;\n",
-    "    color: #ffffff;\n",
-    "    font-size: 2.8rem;\n",
-    "    margin-bottom: 1.5rem;\n",
-    "    font-family: 'Poppins', sans-serif;\n",
-    "    letter-spacing: 1px;\n",
-    "  }\n",
-    "\n",
-    "  .card h3 {\n",
-    "    color: #ffffff;\n",
-    "    font-size: 1.3rem;\n",
-    "    margin-bottom: 0.75rem;\n",
-    "    font-weight: bold;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "  }\n",
-    "\n",
-    "  p {\n",
-    "    color: #dcdcdc;\n",
-    "    font-size: 0.95rem;\n",
-    "    line-height: 1.5;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "    margin-bottom: 0.75rem;\n",
-    "  }\n",
-    "\n",
-    "  ul {\n",
-    "    padding-left: 1.25rem;\n",
-    "    margin-bottom: 0.75rem;\n",
-    "  }\n",
-    "\n",
-    "  li {\n",
-    "    margin-bottom: 0.5rem;\n",
-    "    color: #dcdcdc;\n",
-    "    font-size: 0.95rem;\n",
-    "    line-height: 1.5;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "  }\n",
-    "\n",
-    "  pre {\n",
-    "    background: #1a1a2e;\n",
-    "    padding: 1rem;\n",
-    "    border-radius: 8px;\n",
-    "    color: #f8f8f2;\n",
-    "    direction: ltr;\n",
-    "    overflow-x: auto;\n",
-    "    border: 1px solid rgba(255, 255, 255, 0.1);\n",
-    "  }\n",
-    "\n",
-    "  code {\n",
-    "    color: #ff79c6;\n",
-    "    font-size: 0.95rem;\n",
-    "  }\n",
-    "\n",
-    "  .note {\n",
-    "    background-color: #fdd835;\n",
-    "    color: #000;\n",
-    "    padding: 1rem;\n",
-    "    border-radius: 6px;\n",
-    "    margin-top: 1.25rem;\n",
-    "    font-style: italic;\n",
-    "    font-size: 0.95rem;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "    width: min(900px, 90vw);\n",
-    "    margin: 1.25rem auto 0;\n",
-    "  }\n",
-    "\n",
-    "  .card.green { border-left-color: #66bb6a; }\n",
-    "  .card.blue { border-left-color: #29b6f6; }\n",
-    "  .card.orange { border-left-color: #ffa726; }\n",
-    "  .card.purple { border-left-color: #ba68c8; }\n",
-    "  .card.red { border-left-color: #ef5350; }\n",
-    "\n",
-    "  table {\n",
-    "    width: 100%;\n",
-    "    border-collapse: collapse;\n",
-    "    margin-bottom: 0.75rem;\n",
-    "    color: #e0e0e0;\n",
-    "  }\n",
-    "\n",
-    "  th, td {\n",
-    "    padding: 0.75rem;\n",
-    "    border: 1px solid rgba(255, 255, 255, 0.1);\n",
-    "    text-align: left;\n",
-    "  }\n",
-    "\n",
-    "  th { background-color: rgba(255, 255, 255, 0.05); }\n",
-    "\n",
-    "  @media (max-width: 768px) {\n",
-    "    .section-card { padding: 1.25rem; }\n",
-    "    .card { width: 100%; }\n",
-    "    h1 { font-size: 2rem; }\n",
-    "  }\n",
-    "</style>\n",
-    "\n",
-    "<div class=\"section-card\">\n",
-    "  <h1>Package Management & Virtual Environments</h1>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"section-card\" id=\"toc0_\">\n",
-    "  <h2>Table of Contents</h2>\n",
-    "  <div class=\"container\">\n",
-    "    <div class=\"card toc-card blue\">\n",
-    "      <h3>Explore the Essentials</h3>\n",
-    "      <ul>\n",
-    "        <li><a href=\"#toc1_\" style=\"color: #29b6f6; text-decoration: none;\">1. What Is a Package Manager?</a></li>\n",
-    "        <li><a href=\"#toc2_\" style=\"color: #29b6f6; text-decoration: none;\">2. Package Repositories (PyPI & Mirrors)</a></li>\n",
-    "        <li><a href=\"#toc3_\" style=\"color: #29b6f6; text-decoration: none;\">3. Virtual Environments (venv)</a></li>\n",
-    "        <li><a href=\"#toc4_\" style=\"color: #29b6f6; text-decoration: none;\">4. Pip vs. Conda (Choosing for Iran)</a></li>\n",
-    "        <li><a href=\"#toc5_\" style=\"color: #29b6f6; text-decoration: none;\">5. Best Practices</a></li>\n",
-    "      </ul>\n",
-    "    </div>\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"section-card\" id=\"toc1_\">\n",
-    "    <h2>What Is a Package Manager?</h2>\n",
-    "    <div class=\"container\">\n",
-    "        <div class=\"card orange\">\n",
-    "            <h3>Definition</h3>\n",
-    "            <p>A package manager is a tool that automates the process of installing, upgrading, configuring, and removing computer programs or libraries. In Python, it helps you manage external code written by others.</p>\n",
-    "        </div>\n",
-    "        <div class=\"card orange\">\n",
-    "            <h3>Why Do We Need It?</h3>\n",
-    "            <ul>\n",
-    "                <li><strong>Dependency Resolution:</strong> Automatically installs other libraries required by your main package.</li>\n",
-    "                <li><strong>Version Control:</strong> Ensures you use the correct version of a library for your project.</li>\n",
-    "                <li><strong>Ease of Use:</strong> One command replaces hours of manual searching and compiling.</li>\n",
-    "            </ul>\n",
-    "            <pre><code>pip install pandas</code></pre>\n",
-    "        </div>\n",
     "    </div>\n",
     "</div>\n",
-    "\n",
-    "<div class=\"section-card\" id=\"toc2_\">\n",
-    "    <h2>Package Repositories & Speeding Up (Mirrors)</h2>\n",
-    "    <div class=\"container\">\n",
-    "        <div class=\"card purple\">\n",
-    "            <h3>What is PyPI?</h3>\n",
-    "            <p><strong>PyPI (Python Package Index)</strong> is the official third-party software repository for Python. It is where <code>pip</code> looks for packages by default.</p>\n",
-    "        </div>\n",
-    "        <div class=\"card purple\">\n",
-    "            <h3>Using Mirrors for Stability</h3>\n",
-    "            <p>In regions like Iran, direct access to PyPI can sometimes be slow or restricted. <strong>Mirrors</strong> are local copies of PyPI that provide much faster download speeds and better stability.</p>\n",
-    "            <p>To install a package using a mirror:</p>\n",
-    "            <pre><code>pip install library_name -i https://mirror-pypi.runflare.com/simple</code></pre>\n",
-    "        </div>\n",
-    "    </div>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"section-card\" id=\"toc3_\">\n",
+    "<div class=\"section-card\" id=\"toc6_\">\n",
     "    <h2>Virtual Environments (venv)</h2>\n",
     "    <div class=\"container\">\n",
     "        <div class=\"card green\">\n",
@@ -630,53 +417,9 @@
     "                <strong>Pro Tip:</strong> Always name your environment folder <code>.venv</code>. Modern IDEs like VS Code will detect it automatically!\n",
     "            </div>\n",
     "        </div>\n",
-    "    </div>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"section-card\" id=\"toc4_\">\n",
-    "    <h2>Pip vs. Conda: Which one to use?</h2>\n",
-    "    <div class=\"container\">\n",
-    "        <div class=\"card red\">\n",
-    "            <h3>Comparison Table</h3>\n",
-    "            <table>\n",
-    "                <tr>\n",
-    "                    <th>Feature</th>\n",
-    "                    <th>Pip + venv (Recommended)</th>\n",
-    "                    <th>Conda / Anaconda</th>\n",
-    "                </tr>\n",
-    "                <tr>\n",
-    "                    <td><strong>Stability in Iran</strong></td>\n",
-    "                    <td>High (Works with local mirrors)</td>\n",
-    "                    <td>Low (Often requires VPN/DNS)</td>\n",
-    "                </tr>\n",
-    "                <tr>\n",
-    "                    <td><strong>Size</strong></td>\n",
-    "                    <td>Very Lightweight</td>\n",
-    "                    <td>Heavier Installation</td>\n",
-    "                </tr>\n",
-    "                <tr>\n",
-    "                    <td><strong>Environment Management</strong></td>\n",
-    "                    <td>Separate tool (venv)</td>\n",
-    "                    <td>Built-in</td>\n",
-    "                </tr>\n",
-    "            </table>\n",
-    "        </div>\n",
-    "        <div class=\"card red\">\n",
+    "        <div class=\"card green\">\n",
     "            <h3>Why we prefer Pip + venv for this course</h3>\n",
     "            <p>Conda is powerful for Data Science but can be frustrating due to network timeout issues. By using <b>Pip</b> and <b>venv</b>, you gain full control over your environment with high speed using domestic mirrors.</p>\n",
-    "        </div>\n",
-    "    </div>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"section-card\" id=\"toc5_\">\n",
-    "    <h2>Best Practices</h2>\n",
-    "    <div class=\"container\">\n",
-    "        <div class=\"card blue\">\n",
-    "            <h3>Manage your Dependencies</h3>\n",
-    "            <p>Always keep a record of your project's libraries. You can generate a file called <code>requirements.txt</code>:</p>\n",
-    "            <pre><code>pip freeze > requirements.txt</code></pre>\n",
-    "            <p>Others can then install everything with:</p>\n",
-    "            <pre><code>pip install -r requirements.txt</code></pre>\n",
     "        </div>\n",
     "    </div>\n",
     "</div>"
