--- a/02 Python Setup/05 Setting Up Your Workspace (venv & Conda).ipynb
+++ b/02 Python Setup/05 Setting Up Your Workspace (venv & Conda).ipynb
@@ -28,7 +28,7 @@
     "    font-family: 'Poppins', sans-serif;\n",
     "    letter-spacing: 1px;\n",
     "  }\n",
-    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
+    "\n",
     "  .container {\n",
     "    display: flex;\n",
     "    flex-direction: column;\n",
@@ -95,7 +95,9 @@
     "    line-height: 1.5;\n",
     "    font-family: 'Segoe UI', sans-serif;\n",
     "  }\n",
-    "\n",
+    "  code{\n",
+    "    font-size: 0.95rem;\n",
+    "  }\n",
     "  .note {\n",
     "    background-color: #fdd835;\n",
     "    color: #000;\n",
@@ -105,7 +107,7 @@
     "    font-style: italic;\n",
     "    font-size: 0.95rem;\n",
     "    font-family: 'Segoe UI', sans-serif;\n",
-    "    width: min(1000px, 90vw);\n",
+    "    width: min(900px, 90vw);\n",
     "    margin: 1.25rem auto 0;\n",
     "  }\n",
     "\n",
@@ -127,10 +129,6 @@
     "\n",
     "  .card.red {\n",
     "    border-left-color: #ef5350;\n",
-    "  }\n",
-    "\n",
-    "  .card.pink {\n",
-    "    border-left-color:rgb(233, 98, 168);\n",
     "  }\n",
     "\n",
     "  .toc-card ul {\n",
@@ -155,6 +153,23 @@
     "\n",
     "  .toc-card ul ul {\n",
     "    padding-left: 1.5rem;\n",
+    "  }\n",
+    "\n",
+    "  table {\n",
+    "    width: 100%;\n",
+    "    border-collapse: collapse;\n",
+    "    margin-bottom: 0.75rem;\n",
+    "  }\n",
+    "\n",
+    "  th, td {\n",
+    "    padding: 0.5rem;\n",
+    "    border: 1px solid #dcdcdc;\n",
+    "    text-align: left;\n",
+    "  }\n",
+    "\n",
+    "  th {\n",
+    "    background-color: #24243e;\n",
+    "    color: #ffffff;\n",
     "  }\n",
     "\n",
     "  @media (max-width: 768px) {\n",
@@ -187,6 +202,9 @@
     "    p, li {\n",
     "      font-size: 0.9rem;\n",
     "    }\n",
+    "    .note {\n",
+    "      padding: 0.75rem;\n",
+    "    }\n",
     "  }\n",
     "\n",
     "  @media (max-width: 480px) {\n",
@@ -213,7 +231,7 @@
     "</style>\n",
     "\n",
     "<div class=\"section-card\">\n",
-    "<h1>Installing and Using Conda</h1>\n",
+    "  <h1>Setting Up Your Workspace (venv & Conda)</h1>\n",
     "</div>\n",
     "\n",
     "<!-- Table of Contents -->\n",
@@ -222,33 +240,51 @@
     "  <div class=\"container\">\n",
     "    <div class=\"card toc-card blue\">\n",
     "      <h3>Contents</h3>\n",
+    "      <h3>Contents</h3>\n",
     "      <ul>\n",
-    "        <li><a href=\"#toc1_\">Understanding the Differences: Conda, Miniconda, and Anaconda</a></li>\n",
-    "        <li><a href=\"#toc2_\">Why Prefer Miniconda</a></li>\n",
-    "        <li><a href=\"#toc3_\">Installing miniconda</a>\n",
+    "        <li><a href=\"#toc_venv\" style=\"color: #29b6f6; text-decoration: none;\">1. Option 1: venv (Fast & Built-in)</a></li>\n",
+    "        <li><a href=\"#toc_conda_intro\" style=\"color: #29b6f6; text-decoration: none;\">2. Option 2: Conda (Professional Powerhouse)</a>\n",
     "          <ul>\n",
-    "            <li><a href=\"#toc3_1_\">Windows</a></li>\n",
-    "            <li><a href=\"#toc3_2_\">Linux and Windows Subsystem for Linux (WSL)</a></li>\n",
-    "            <li><a href=\"#toc3_3_\">macOS</a></li>\n",
+    "            <li><a href=\"#toc1_\">Understanding the Differences: Conda, Miniconda, and Anaconda</a></li>\n",
+    "            <li><a href=\"#toc2_\">Why Prefer Miniconda</a></li>\n",
+    "            <li><a href=\"#toc3_\">Installing Miniconda</a></li>\n",
+    "            <li><a href=\"#toc4_\">Conda Environments</a></li>\n",
+    "            <li><a href=\"#toc5_\">Installing and Managing Packages</a></li>\n",
+    "            <li><a href=\"#toc6_\">Environment Files</a></li>\n",
+    "            <li><a href=\"#toc7_\">Best Practices</a></li>\n",
     "          </ul>\n",
     "        </li>\n",
-    "        <li><a href=\"#toc4_\">Conda Environments</a>\n",
-    "          <ul>\n",
-    "            <li><a href=\"#toc4_1_\">Creating a New Environment</a></li>\n",
-    "            <li><a href=\"#toc4_2_\">Activating and Deactivating Environments</a></li>\n",
-    "            <li><a href=\"#toc4_3_\">Listing Environments and Packages</a></li>\n",
-    "            <li><a href=\"#toc4_4_\">Removing Environments</a></li>\n",
-    "          </ul>\n",
-    "        </li>\n",
-    "        <li><a href=\"#toc5_\">Installing and Managing Packages</a></li>\n",
-    "        <li><a href=\"#toc6_\">Environment Files</a></li>\n",
-    "        <li><a href=\"#toc7_\">Best Practices</a></li>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
+    "<div class=\"section-card\" id=\"toc_venv\">\n",
+    "  <h2>Option 1: The Fast & Lightweight Way (venv)</h2>\n",
+    "  <div class=\"container\">\n",
+    "    <div class=\"card green\">\n",
+    "      <h3>What is venv?</h3>\n",
+    "      <p><b>venv</b> is the standard Python tool for creating virtual environments. It is pre-installed with Python, making it the fastest way to start a project without needing external software.</p>\n",
+    "    </div>\n",
+    "    <div class=\"card green\">\n",
+    "      <h3>Setup Instructions</h3>\n",
+    "      <p>Open your terminal/command prompt and follow these steps:</p>\n",
+    "      <pre><code># 1. Create the environment folder named '.venv'\n",
+    "python -m venv .venv\n",
+    "# 2. Activate it (Windows)\n",
+    ".venv\\Scripts\\activate\n",
+    "# 3. Activate it (Mac/Linux)\n",
+    "source .venv/bin/activate</code></pre>\n",
+    "      <div class=\"note\">\n",
+    "        <strong>Pro Tip:</strong> We use <b>.venv</b> (with a dot) so it remains hidden in your file explorer and is automatically ignored by most professional tools.\n",
+    "      </div>\n",
+    "    </div>\n",
+    "  </div>\n",
+    "</div>\n",
+    "\n",
     "<!-- Section 1: Understanding the Differences: Conda, Miniconda, and Anaconda -->\n",
+    "<div class=\"section-card\" id=\"toc_conda_intro\">\n",
+    "  <h2>Option 2: The Professional Powerhouse (Conda)</h2>\n",
     "<div class=\"section-card\" id=\"toc1_\">\n",
     "  <h2>Understanding the Differences: Conda, Miniconda, and Anaconda</h2>\n",
     "  <div class=\"container\">\n",
@@ -341,7 +377,6 @@
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
-    "\n",
     "<!-- Section 5: Installing and Managing Packages -->\n",
     "<div class=\"section-card\" id=\"toc5_\">\n",
     "  <h2>Installing and Managing Packages</h2>\n",
@@ -385,8 +420,11 @@
     "  <h2>Best Practices</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card blue\">\n",
-    "      <h3>Overview</h3>\n",
-    "      <p>Create separate environments for projects to avoid conflicts; use Conda for complex dependencies and data science libraries.</p>\n",
+    "      <ul>\n",
+    "        <li><b>Isolation:</b> Create a new environment for <i>every</i> new project.</li>\n",
+    "        <li><b>Cleanliness:</b> Never install packages globally on your computer.</li>\n",
+    "        <li><b>Mirrors:</b> Use local mirrors for <code>pip</code> to ensure high-speed downloads in Iran.</li>\n",
+    "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>"
