--- a/02 Python Setup/06 Using Environments in VS Code.ipynb
+++ b/02 Python Setup/06 Using Environments in VS Code.ipynb
@@ -213,7 +213,7 @@
     "</style>\n",
     "\n",
     "<div class=\"section-card\">\n",
-    "<h1>Using Conda Environments in VS Code</h1>\n",
+    "<h1>Using Environments in VS Code</h1>\n",
     "</div>\n",
     "\n",
     "<!-- Table of Contents -->\n",
@@ -224,8 +224,8 @@
     "      <h3>Contents</h3>\n",
     "      <ul>\n",
     "        <li><a href=\"#toc1_\">Installing the VS Code Extension</a></li>\n",
-    "        <li><a href=\"#toc2_\">Selecting a Conda Environment in VS Code</a></li>\n",
-    "        <li><a href=\"#toc3_\">Activating a Conda Environment in the Integrated Terminal</a></li>\n",
+    "        <li><a href=\"#toc2_\">Selecting a Environment in VS Code</a></li>\n",
+    "        <li><a href=\"#toc3_\">Activating a Environment in the Integrated Terminal</a></li>\n",
     "        <li><a href=\"#toc4_\">Using Jupyter Lab in VS Code</a></li>\n",
     "      </ul>\n",
     "    </div>\n",
@@ -253,7 +253,7 @@
     "\n",
     "<!-- Section 2: Selecting a Conda Environment in VS Code -->\n",
     "<div class=\"section-card\" id=\"toc2_\">\n",
-    "  <h2>Selecting a Conda Environment in VS Code</h2>\n",
+    "  <h2>Selecting a Environment in VS Code</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card purple\">\n",
     "      <h3>Interpreters</h3>\n",
@@ -275,7 +275,7 @@
     "\n",
     "<!-- Section 3: Activating a Conda Environment in the Integrated Terminal -->\n",
     "<div class=\"section-card\" id=\"toc3_\">\n",
-    "  <h2>Activating a Conda Environment in the Integrated Terminal</h2>\n",
+    "  <h2>Activating a Environment in the Integrated Terminal</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card red\">\n",
     "      <h3>Steps</h3>\n",
