--- a/01 introduction/00 introduction of course.ipynb
+++ b/01 introduction/00 introduction of course.ipynb
@@ -152,38 +152,49 @@
     "    <div class=\"card green\">\n",
     "      <h3>Who is this course for?</h3>\n",
     "      <ul>\n",
-    "        <li>Complete beginners with no prior programming experience.</li>\n",
-    "        <li>Students who want a clear, project-oriented introduction to Python.</li>\n",
+    "        <li>Beginners who want to start programming.</li>\n",
+    "        <li>Students who need Python for university projects.</li>\n",
+    "        <li>Developers from other languages transitioning to Python.</li>\n",
     "        <li>Anyone interested in starting paths like web development, data analysis, automation, or AI.</li>\n",
     "      </ul>\n",
     "    </div>\n",
     "    <div class=\"card orange\">\n",
-    "      <h3>What will you learn?</h3>\n",
+    "      <h3>Why learning Python matters?</h3>\n",
     "      <ul>\n",
-    "        <li>Programming fundamentals: variables, data types, and operators.</li>\n",
-    "        <li>Data structures: lists, tuples, dictionaries and sets.</li>\n",
-    "        <li>Control flow: conditionals and loops.</li>\n",
-    "        <li>Functions, file I/O, and working with popular libraries.</li>\n",
-    "        <li>Object-Oriented Programming(OOP)</li>\n",
-    "        <li>Small projects to bring everything together.</li>\n",
+    "        <li>Python is one of the easiest and most enjoyable programming languages to learn.</li>\n",
+    "        <li>It helps you turn your ideas into real, working programs quickly.</li>\n",
+    "        <li>It’s a tool that saves time and boosts productivity.</li>\n",
     "      </ul>\n",
     "    </div>\n",
     "    <div class=\"card purple\">\n",
     "      <h3>Teaching method</h3>\n",
-    "      <p>Each lesson is short and focused on one concept. We use examples you can run immediately. Early lessons use Jupyter-style notebooks for clarity, and later lessons show real project structure in VS Code so you learn practical workflow.</p>\n",
+    "      <ul>\n",
+    "        <li>Each lesson is presented as a clean and interactive Jupyter Notebook.</li>\n",
+    "        <li>Concepts are explained through real examples and simple demonstrations</li>\n",
+    "        <li>Exercises at the end of each section help reinforce what you’ve learned.</li>\n",
+    "        <li>The course follows a clear, step-by-step progression.</li>\n",
+    "      </ul>\n",
     "      <div class=\"note\">\n",
     "      <strong>Tip:</strong> open each lesson folder in VS Code and try the examples as you watch.</p>\n",
     "      </div>\n",
     "    </div>\n",
+    "    <div class=\"card blue\">\n",
+    "      <h3>Where to access the files?</h3>\n",
+    "      <p>\n",
+    "      All notebooks and course materials are available on GitHub:\n",
+    "      <br>\n",
+    "      <a href=\"https://github.com/MAA5524/Python-Course\">GitHub Repository<a>\n",
+    "      </p>\n",
+    "    </div>\n",
     "    <div class=\"card red\">\n",
-    "      <h3>How to use this notebook</h3>\n",
+    "      <h3>How to use these notebook?</h3>\n",
     "      <ol>\n",
     "        <li>Read the short sections and run code cells if present.</li>\n",
     "        <li>Try the exercises at the end of each lesson folder.</li>\n",
     "        <li>At the end of the course you'll build a small project that uses what you've learned.</li>\n",
     "      </ol>\n",
     "    </div>\n",
-    "      <h3>Let's get started 🚀</h3>\n",
+    "    <div>\n",
     "      <!-- Button to open the next notebook -->\n",
     "      <p style=\"text-align:center; margin-top:1rem;\">\n",
     "        <a href=\"01 Introduction to Python Programming.ipynb\" target=\"_blank\" style=\"\n",
