--- a/01 introduction/00 introduction of course.ipynb
+++ b/01 introduction/00 introduction of course.ipynb
@@ -98,7 +98,7 @@
     "    margin: 1.25rem auto 0;\n",
     "  }\n",
     "    .image-card img {\n",
-    "    max-width: 65vw;\n",
+    "    max-width: 40vw;\n",
     "    height: auto;\n",
     "    display: block;\n",
     "    margin: 10px auto;\n",
@@ -149,6 +149,14 @@
     "      <p>Hello — I'm excited you're here. This course is designed to teach you Python from the ground up in short, practical lessons. We'll balance explanation with hands-on examples so you can follow along on your own machine.</p>\n",
     "      <img src=\"https://www.mygreatlearning.com/blog/wp-content/uploads/2019/08/python-libraries-2.jpg\" alt=\"Python code on laptop\">\n",
     "    </div>\n",
+    "    <div class=\"card orange\">\n",
+    "      <h3>Why learning Python matters?</h3>\n",
+    "      <ul>\n",
+    "        <li>Python is one of the easiest and most enjoyable programming languages to learn.</li>\n",
+    "        <li>It helps you turn your ideas into real, working programs quickly.</li>\n",
+    "        <li>It’s a tool that saves time and boosts productivity.</li>\n",
+    "      </ul>\n",
+    "    </div>\n",
     "    <div class=\"card green\">\n",
     "      <h3>Who is this course for?</h3>\n",
     "      <ul>\n",
@@ -156,14 +164,7 @@
     "        <li>Students who need Python for university projects.</li>\n",
     "        <li>Developers from other languages transitioning to Python.</li>\n",
     "        <li>Anyone interested in starting paths like web development, data analysis, automation, or AI.</li>\n",
-    "      </ul>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\">\n",
-    "      <h3>Why learning Python matters?</h3>\n",
-    "      <ul>\n",
-    "        <li>Python is one of the easiest and most enjoyable programming languages to learn.</li>\n",
-    "        <li>It helps you turn your ideas into real, working programs quickly.</li>\n",
-    "        <li>It’s a tool that saves time and boosts productivity.</li>\n",
+    "        <img style=\"width: 40vw; height: auto;display: block; margin: 10px auto;border-radius: 5px;\" src=\"../images/who_is_this_course_for.jpg\" alt=\"who is this course for?\">\n",
     "      </ul>\n",
     "    </div>\n",
     "    <div class=\"card purple\">\n",
